# SimulatingManipulativeAgents

./: .env    README.md  SimulateChat.py  pyproject.toml  run_interactions.py
agents/: Assistant.py  User.py
analysis/: generate_graphs.py  graphs.ipynb  user_compliance_analysis.ipynb
detection/: binary_detection.py  detection_anaysis.ipynb  detection_find_optimal_score.ipynb  score_detection.py
model_calling/: DeepSeek.py  Gemini.py  LLM.py  Llama.py  OpenAI.py
prompts/: agent_planning_prompt.txt  decision_scenarios.json  goal_contradiction_check_prompt.txt  malicious_ai_system_prompt.txt  manipulation_check_prompt.txt
results/: ai_interaction_results_deepseek-chat_1_interactions_noplan.json  ai_interaction_results_deepseek-chat_1_interactions_plan.json  ai_interaction_results_deepseek-chat_1_interactions_plan_630_1000.json  ai_interaction_results_deepseek-chat_1_interactions_plan_645_1000.json  ai_interaction_results_deepseek-chat_1_interactions_plan_670_1000.json  ai_interaction_results_deepseek-chat_1_interactions_plan_850_1000.json  ai_interaction_results_gemini-2.0-flash_0_interactions.json  ai_interaction_results_gemini-2.0-flash_0_interactions_noplan.json  ai_interaction_results_llama3.3-70b_1_interactions_noplan_650_1000.json  ai_interaction_results_llama3.3-70b_1_interactions_plan.json
results_binary/: ai_interaction_results_deepseek-chat_0_interactions_noplan_detection_results.json  ai_interaction_results_deepseek-chat_1_interactions_noplan_detection_results.json  ai_interaction_results_deepseek-chat_1_interactions_plan_detection_results.json  (+7 more)
(+62 files in other folders)
